# memedaq

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
apps/web/: README.md  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/api/coingecko/: route.ts
apps/web/lib/: anchor.ts  anchor_new.ts  jupiter.ts  meme_index.json  tokens.ts
config/: assets.testnet.json
programs/meme_index/: Cargo.toml
programs/meme_index/src/: lib.rs
scripts/: create-mint.ts  initialize-index.ts
