[package]
name = "meme_index"
version = "0.1.0"
edition = "2021"

[lib]
name = "meme_index"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
